# TechSolve_manim

./: README.md  pyproject.toml
src/TechSolve_manim/: main.py
src/TechSolve_manim/components/: CustomStealthTip.py  CustomText.py
src/TechSolve_manim/scenes/: GridScene.py
src/TechSolve_manim/utils/: constants.py  helpers.py
tests/: mainTest.py
